# whatsappnalysis

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yml
notebooks/: playground.ipynb
src/: __init__.py  config.py  dataset.py  pipeline.py  schema.py
src/nodes/: add_features.py  chat_loader.py  clean.py  load.py
tests/: mypy.ini  pytest.ini  test_dataset.py  test_pipeline.py
tests/nodes/: test_add_features.py  test_clean.py  test_load.py
tests/test_lib/test_analysis/: test_feature_adder.py
tests/test_lib/test_custom_types/: test_chat_dataset.py
tests/test_lib/test_data_loader/: test_whatsapp_loader.py
tests/test_lib/test_model/: test_lstm.py
whatsappnalysis/: __init__.py  config.py  config_model.yaml  config_pipeline.yaml  dataset.py  pipeline.py  pipeline_config.yaml  playground.ipynb
whatsappnalysis/lib/: base_config.py  dataset.py
whatsappnalysis/lib/analysis/: __init__.py  feature_adder.py
whatsappnalysis/lib/custom_types/: __init__.py  chat_dataset.py  config.py  model.py
whatsappnalysis/lib/data_loader/: __init__.py  whatsapp_loader.py
whatsappnalysis/lib/model/: base_model.py  lstm.py  lstm_config.yaml
whatsappnalysis/nodes/: add_features.py  clean.py  load.py  model_lstm.py
