[tool.poetry]
name = "whatsentiment"
version = "0.1.0"
description = ""
authors = ["lbartell <lenabartell@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7"
numpy = "^1.19.2"
pandas = "^1.1.3"
pendulum = "^2.1.2"
loguru = "^0.5.3"
pyarrow = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
