[tool.poetry]
name = "whatsappnalysis"
version = "1.0.0"
description = ""
authors = ["lbartell <lenabartell@gmail.com>"]
packages = [{ include = "src"}]

[tool.poetry.dependencies]
python = "^3.7.1"
numpy = "^1.19.2"
pandas = "^1.1.3"
pendulum = "^2.1.2"
loguru = "^0.5.3"
pyarrow = "^1.0.1"
nltk = "^3.5"
jupyterlab = "^2.2.8"
seaborn = "^0.11.0"
matplotlib = "^3.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
